--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,6 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "HNow";
+  src: url("../fonts/HM\ Regular.otf");
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: "HNow";
+  src: url("../fonts/HN\ Medium.otf");
+  font-weight: 600;
+}
+
+@font-face {
+  font-family: "HNow";
+  src: url("../fonts/HN\ Bold.otf");
+  font-weight: 800;
+}
+
 * {
   padding: 0px;
   margin: 0px;
@@ -9,7 +27,7 @@
   text-decoration: none;
   box-sizing: border-box;
   outline: 0px;
-  font-family: "Helvetica Now Display";
+  font-family: "HNow";
 }
 
 .hovanim {
