--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -189,3 +189,81 @@ body::before {
   filter: blur(0px);
   -webkit-filter: blur(0px);
 }
+
+.marqueeFull {
+  position: relative;
+  width: 100vw;
+  max-width: 100%;
+  height: 200px;
+  overflow-x: hidden;
+  font-size: 8rem;
+}
+
+.trackFull {
+  position: absolute;
+  white-space: nowrap;
+  will-change: transform;
+  animation: marqueeAnim 20s linear infinite;
+}
+
+@keyframes marqueeAnim {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-50%);
+  }
+}
+
+.marqueeFullR {
+  position: relative;
+  width: 100vw;
+  max-width: 100%;
+  height: 200px;
+  overflow-x: hidden;
+  font-size: 8rem;
+}
+
+.trackFullR {
+  position: absolute;
+  white-space: nowrap;
+  will-change: transform;
+  animation: marqueeAnimR 20s linear infinite;
+}
+
+@keyframes marqueeAnimR {
+  from {
+    transform: translateX(-50%);
+  }
+  to {
+    transform: translateX(0%);
+  }
+}
+
+.rot {
+  will-change: transform;
+  animation: roto 10s linear infinite;
+}
+
+@keyframes roto {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.rotrev {
+  will-change: transform;
+  animation: rotorev 10s linear infinite;
+}
+
+@keyframes rotorev {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(-360deg);
+  }
+}
