--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -109,42 +109,14 @@ body::before {
 
 @layer components {
   .sunrise {
-    background: linear-gradient(
-      to top,
-      #58151a,
-      #bc2909,
-      #ba6d09,
-      #71a8ee,
-      #3072eb,
-      #1552c6,
-      #0542a8
-    );
+    background: linear-gradient(to top, #58151a, #bc2909, #ba6d09, #71a8ee, #3072eb, #1552c6, #0542a8);
   }
 
   .sunsets {
-    background: linear-gradient(
-      to top,
-      rgba(4, 3, 8),
-      #ad4a28,
-      #dd723c,
-      #fc7001,
-      #dcb697,
-      #9ba5ae,
-      #3e5879
-    );
+    background: linear-gradient(to top, rgba(4, 3, 8), #ad4a28, #dd723c, #fc7001, #dcb697, #9ba5ae, #3e5879);
   }
   .sunset {
-    background: linear-gradient(
-      to top,
-      #040308,
-      #ad4a28,
-      #dd723c,
-      #fc7001,
-      #dcb697,
-      #9ba5ae,
-      #3e5879,
-      #020b1a
-    );
+    background: linear-gradient(to top, #040308, #ad4a28, #dd723c, #fc7001, #dcb697, #9ba5ae, #3e5879, #020b1a);
   }
 }
 
@@ -276,6 +248,7 @@ body::before {
 }
 .h1 span {
   display: block;
+  
   animation: h1reveal 1.5s cubic-bezier(0.77, 0, 0.175, 1) 3s;
 }
 
@@ -285,11 +258,7 @@ body::before {
     opacity: 0;
   }
   100% {
-    transform: translate(0, 0);
+    transform: translate(0, 0%);
     opacity: 1;
   }
-}
-
-.nitem {
-  @apply text-[15vh] font-medium uppercase leading-none text-white w-fit;
 }
